<resources>
    <string name="app_name">Hostpital</string>
    <string name="login_user_text">Usuario:</string>
    <string name="login_password_text">Contraseña:</string>
    <string name="rights_reserved">Todos los derechos reservados por Michael Chan y Augusto Alonso</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_patient">PatientActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="fill_fields">Llene todos los campos que se le solicitan a continuacion</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Enviar</string>
    <string name="menu_doctors">Doctores</string>
    <string name="menu_patients">Pacientes</string>
    <string name="menu_dates">Citas</string>
    <string name="menu_dates_requests">Requests de citas</string>
    <string name="configuration">Configuracion</string>
    <string name="log_out">Cerrar Sesion</string>


    <string name="title_activity_doctor">Doctor Activity</string>
    <string name="app_doctor">App Doctor</string>
    <string name="app_patient">App Patient</string>
    <string name="check">Revisar</string>
    <string name="reason">Razon %s %s</string>

    <string name="title_activity_splash">SplashActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="date">Cita</string>
    <string name="holder">Holder</string>
    <string name="reason_holder">Razon</string>
    <string name="status_holder">Status</string>
    <string name="date_holder">Fecha</string>
    <string name="doctor">Doctor</string>
    <string name="patient">Paciente</string>


    <string name="pending">Pendiente</string>
    <string name="accepted">Aceptada</string>
    <string name="rejected">Rechazada</string>
    <string name="done">Realizada</string>
    <string name="button_accept">Aceptar</string>
    <string name="button_reject">Rechazar</string>
    <string name="button_check_report">Ver Reporte</string>
    <string name="button_process_date">Procesar Cita</string>


    <!--//DoReport-->
    <string name="report">Reporte</string>
    <string name="recipe">Receta</string>
    <string name="observations">Observaciones</string>


    <!--Doctor-->
    <string name="doctor_type">Especialidad del doctor</string>
    <string name="doctor_schedule">Horario del doctor</string>
    <string name="doctor_date">Pedir Cita</string>

    <!--Patient-->
    <string name="email">email</string>

</resources>
