<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">

    <pl.droidsonroids.gif.GifImageView
        android:id="@+id/logo_gif"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginStart="142dp"
        android:layout_marginTop="54dp"
        android:layout_marginEnd="142dp"
        android:src="@drawable/ic_pills"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/App_name_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/app_name"
        android:textColor="@color/colorPrimary"
        android:textSize="36sp"
        android:typeface="normal"
        app:fontFamily="@font/chelsea_market"
        app:layout_constraintEnd_toEndOf="@+id/logo_gif"
        app:layout_constraintStart_toStartOf="@+id/logo_gif"
        app:layout_constraintTop_toBottomOf="@+id/logo_gif" />

    <TextView
        android:id="@+id/user_txtview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:text="@string/login_user_text"
        android:textColor="@android:color/black"
        android:textSize="18sp"
        app:fontFamily="@font/chelsea_market"
        app:layout_constraintEnd_toStartOf="@+id/App_name_login"
        app:layout_constraintTop_toBottomOf="@+id/App_name_login" />

    <EditText
        android:id="@+id/user_edit_txt"
        android:layout_width="203dp"
        android:layout_height="38dp"
        android:layout_marginStart="48dp"
        android:ems="10"
        android:fontFamily="sans-serif"
        android:inputType="textEmailAddress"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="@+id/user_txtview"
        app:layout_constraintStart_toEndOf="@+id/user_txtview"
        app:layout_constraintTop_toTopOf="@+id/user_txtview"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/password_txtview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:fontFamily="@font/chelsea_market"
        android:text="@string/login_password_text"
        android:textColor="@android:color/black"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="@+id/user_txtview"
        app:layout_constraintTop_toBottomOf="@+id/user_txtview" />

    <EditText
        android:id="@+id/password_edit_txt"
        android:layout_width="203dp"
        android:layout_height="38dp"
        android:ems="10"
        android:fontFamily="sans-serif"
        android:inputType="textPassword"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="@+id/password_txtview"
        app:layout_constraintStart_toStartOf="@+id/user_edit_txt"
        app:layout_constraintTop_toTopOf="@+id/password_txtview"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="20dp"
        android:fontFamily="@font/mandali"
        android:text="@string/rights_reserved"
        android:textSize="10sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="8dp"
        android:onClick="login"
        android:text="Log In"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password_edit_txt" />

    <Button
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:onClick="login"
        android:text="Create User"
        app:layout_constraintEnd_toEndOf="@+id/button"
        app:layout_constraintStart_toStartOf="@+id/button"
        app:layout_constraintTop_toBottomOf="@+id/button" />

</androidx.constraintlayout.widget.ConstraintLayout>