<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Selected_date">

    <TextView
        android:id="@+id/TitleReport"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="176dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="176dp"
        android:fontFamily="@font/cambay"
        android:text="@string/date"
        android:textColor="@android:color/black"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/role_txt_selected"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:fontFamily="@font/cambay"
        android:text="@string/holder"
        android:textAlignment="viewStart"
        android:textColor="@android:color/black"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="@+id/role_txt_selected_holder"
        app:layout_constraintTop_toBottomOf="@+id/role_txt_selected_holder" />

    <TextView
        android:id="@+id/date_txt_selected"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:fontFamily="@font/cambay"
        android:text="@string/holder"
        android:textColor="@android:color/black"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="@+id/txt_selected_holder2"
        app:layout_constraintTop_toBottomOf="@+id/txt_selected_holder2" />

    <TextView
        android:id="@+id/status_txt_selected"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:fontFamily="@font/cambay"
        android:text="@string/holder"
        android:textColor="@android:color/black"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="@+id/txt_selected_holder"
        app:layout_constraintTop_toBottomOf="@+id/txt_selected_holder" />

    <TextView
        android:id="@+id/reason_txt_selected"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:fontFamily="@font/cambay"
        android:text="@string/holder"
        android:textColor="@android:color/black"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="@+id/txt_reason_holder"
        app:layout_constraintTop_toBottomOf="@+id/txt_reason_holder" />

    <TextView
        android:id="@+id/role_txt_selected_holder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="18dp"
        android:layout_marginTop="32dp"
        android:fontFamily="@font/cambay"
        android:text="@string/holder"
        android:textColor="@android:color/black"
        android:textSize="24sp"
        android:textStyle="italic"
        app:layout_constraintStart_toEndOf="@+id/role_view"
        app:layout_constraintTop_toBottomOf="@+id/TitleReport" />

    <TextView
        android:id="@+id/txt_selected_holder2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:fontFamily="@font/cambay"
        android:text="@string/date_holder"
        android:textColor="@android:color/black"
        android:textSize="24sp"
        android:textStyle="italic"
        app:layout_constraintStart_toStartOf="@+id/role_view"
        app:layout_constraintTop_toBottomOf="@+id/role_view" />

    <TextView
        android:id="@+id/txt_selected_holder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/cambay"
        android:text="@string/status_holder"
        android:textColor="@android:color/black"
        android:textSize="24sp"
        android:textStyle="italic"
        app:layout_constraintStart_toStartOf="@+id/date_txt_selected"
        app:layout_constraintTop_toBottomOf="@+id/date_txt_selected" />

    <TextView
        android:id="@+id/txt_reason_holder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="52dp"
        android:fontFamily="@font/cambay"
        android:text="@string/reason_holder"
        android:textColor="@android:color/black"
        android:textSize="24sp"
        android:textStyle="italic"
        app:layout_constraintBottom_toBottomOf="@+id/txt_selected_holder"
        app:layout_constraintStart_toEndOf="@+id/txt_selected_holder"
        app:layout_constraintTop_toTopOf="@+id/txt_selected_holder" />

    <ImageView
        android:id="@+id/role_view"
        android:layout_width="137dp"
        android:layout_height="137dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="18dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/TitleReport"
        tools:src="@tools:sample/avatars" />

    <Button
        android:id="@+id/always_selected_date_button"
        android:layout_width="142dp"
        android:layout_height="47dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="30dp"
        android:background="@android:color/white"
        android:text="@string/holder"
        app:layout_constraintStart_toStartOf="@+id/status_txt_selected"
        app:layout_constraintTop_toBottomOf="@+id/status_txt_selected" />

    <Button
        android:id="@+id/optional_selected_button"
        android:layout_width="142dp"
        android:layout_height="47dp"
        android:layout_marginStart="25dp"
        android:background="@android:color/white"
        android:text="@string/holder"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="@+id/always_selected_date_button"
        app:layout_constraintStart_toEndOf="@+id/always_selected_date_button"
        app:layout_constraintTop_toTopOf="@+id/always_selected_date_button" />

</androidx.constraintlayout.widget.ConstraintLayout>